# visao-computacional

./: .gitignore  README.md  atividade_2.ipynb  atividade_4.ipynb  atividade_5.ipynb  exercicio_1.ipynb  exercicio_2.ipynb  exercicio_3.ipynb  pyproject.toml  requirements.txt
src/: conversion.py  filter.py  transform.py  utils.py
