[tool.poetry]
name = "visao computacional"
version = "0.1.0"
description = ""
authors = ["REIS0 <aor@cesar.school>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "1.20"
jupyterlab = "^3.1.11"
Pillow = "^8.3.2"
numba = "^0.54.0"
matplotlib = "^3.4.3"
scikit-image = "^0.18.3"
black = "^21.9b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
